2008-07-06  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerrenderer.py.in
	(PokerInteractorsTests.MockConfig): Created mock up.
	(PokerInteractorsTests.MockPokerRenderer): Wrote method.
	(PokerInteractorsTests.MockPokerRenderer.render): Wrote method.
	(PokerInteractorsTests.test02_interactorDisplayNodeUnknownGame):
	Wrote method.
	(PokerInteractorsTests.MockPokerProtocol.getCurrentGameId): Wrote
	method.
	(PokerInteractorsTests.MockSettings): Created mock up.
	(PokerInteractorsTests.test03_interactorDisplayKnownGameSameState):
	Wrote method.
	(PokerInteractorsTests.test04_interactorDisplayKnownGameChangedState):
	Wrote method.
	(PokerInteractorsTests.test05_interactorsSyncDisplay_NoFactoryDisplay):
	Wrote method.
	(PokerInteractorsTests.MockPokerFactory.__init__): added
	self.display initialization.
	(PokerInteractorsTests.tearDown): Wrote method.
	(PokerInteractorsTests.setUp): Added override of PokerInteractor.
	(PokerInteractorsTests.MockInteractor.__init__): Set init to have
	the correct number of arguments.
	(PokerInteractorsTests.test06_interactorsSyncDisplay_displayOn):
	Wrote method.
	(PokerInteractorsTests.MockInteractor.select): Wrote method.
	(PokerInteractorsTests.MockInteractor.update): Wrote method.
	(PokerInteractorsTests.MockInteractor.resetAllTestValues): Wrote
	method.
	(PokerInteractorsTests.MockInteractor.__init__): Switched to use
	resetAllTestValues()
	(PokerInteractorsTests.test07_interactorSelected_wrongGame): Wrote
	method.
	(PokerInteractorsTests.setUp): Added reset of
	countMockInteractorsInstantiated
	(PokerInteractorsTests.MockInteractor.__init__): Added
	countMockInteractorsInstantiated
	(PokerInteractorsTests.helper_interactorSelected): Wrote method.
	(PokerInteractorsTests.test08_interactorSelected_rightGame_fold):
	Wrote method.
	(PokerInteractorsTests.test09_interactorSelected_rightGame_check):
	Wrote method.
	(PokerInteractorsTests.test10_interactorSelected_rightGame_raise):
	Wrote method.